hadoop-streaming-assignment-2-stop-words

--- a/Big-data-essentials/hadoop-playground.ipynb
+++ b/Big-data-essentials/hadoop-playground.ipynb
@@ -24,6 +24,26 @@
     "# Check if a file exists\n",
     "!if $(hadoop fs -test -d $yourdir) ; then echo \"ok\";else echo \"not ok\"; fi"
    ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "# Write head of a file into another\n",
+    "!hdfs dfs -cat /data/wiki/en_articles_part/articles-part | head -1 | hadoop fs -put - part_02"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "# Awk example\n",
+    "!cat out.txt | awk -v OFS='\\t' '{print $2}'"
+   ]
   }
  ],
  "metadata": {
