hadoop-streaming-assignment-3-name-count

--- a/Big-data-essentials/hadoop-playground.ipynb
+++ b/Big-data-essentials/hadoop-playground.ipynb
@@ -44,6 +44,17 @@
     "# Awk example\n",
     "!cat out.txt | awk -v OFS='\\t' '{print $2}'"
    ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "# Copy local file\n",
+    "hadoop fs -put /path/in/linux /hdfs/path\n",
+    "hadoop fs -copyFromLocal /path/in/linux /hdfs/path"
+   ]
   }
  ],
  "metadata": {
