--- a/Big-data-essentials/hadoop-playground.ipynb
+++ b/Big-data-essentials/hadoop-playground.ipynb
@@ -10,9 +10,9 @@
     "# Мар reduce job testing\n",
     "!hdfs dfs -cat wordcount_result/part-00000 | \\\n",
     "head -100 | \\\n",
-    "/usr/bin/python2 ./mapper-words-ranking.py | \\\n",
+    "/usr/bin/python2 ./mapper.py | \\\n",
     "sort | \\\n",
-    "/usr/bin/python2 ./reduser-words-ranking.py > out.txt"
+    "/usr/bin/python2 ./reducer.py > out.txt"
    ]
   },
   {
