--- a/Big-data-essentials/hadoop-streaming-assignment-3-name-count.ipynb
+++ b/Big-data-essentials/hadoop-streaming-assignment-3-name-count.ipynb
@@ -2,9 +2,17 @@
  "cells": [
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 1,
    "metadata": {},
-   "outputs": [],
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "Overwriting mapper.py\n"
+     ]
+    }
+   ],
    "source": [
     "%%writefile mapper.py\n",
     "\n",
@@ -26,9 +34,17 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 2,
    "metadata": {},
-   "outputs": [],
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "Overwriting reducer.py\n"
+     ]
+    }
+   ],
    "source": [
     "%%writefile reducer.py\n",
     "\n",
@@ -70,9 +86,17 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 3,
    "metadata": {},
-   "outputs": [],
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "Overwriting mapper-words-ranking.py\n"
+     ]
+    }
+   ],
    "source": [
     "%%writefile mapper-words-ranking.py\n",
     "\n",
@@ -88,9 +112,17 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 4,
    "metadata": {},
-   "outputs": [],
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "Overwriting reducer-words-ranking.py\n"
+     ]
+    }
+   ],
    "source": [
     "%%writefile reducer-words-ranking.py\n",
     "\n",
@@ -106,12 +138,177 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 5,
    "metadata": {},
-   "outputs": [],
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "french\t5753\n"
+     ]
+    },
+    {
+     "name": "stderr",
+     "output_type": "stream",
+     "text": [
+      "18/01/14 19:18:51 INFO client.RMProxy: Connecting to ResourceManager at /0.0.0.0:8032\n",
+      "18/01/14 19:18:51 INFO client.RMProxy: Connecting to ResourceManager at /0.0.0.0:8032\n",
+      "18/01/14 19:18:52 INFO mapred.FileInputFormat: Total input files to process : 1\n",
+      "18/01/14 19:18:52 INFO mapreduce.JobSubmitter: number of splits:2\n",
+      "18/01/14 19:18:52 INFO mapreduce.JobSubmitter: Submitting tokens for job: job_1515912325866_0013\n",
+      "18/01/14 19:18:52 INFO impl.YarnClientImpl: Submitted application application_1515912325866_0013\n",
+      "18/01/14 19:18:52 INFO mapreduce.Job: The url to track the job: http://4c3b86566330:8088/proxy/application_1515912325866_0013/\n",
+      "18/01/14 19:18:52 INFO mapreduce.Job: Running job: job_1515912325866_0013\n",
+      "18/01/14 19:18:58 INFO mapreduce.Job: Job job_1515912325866_0013 running in uber mode : false\n",
+      "18/01/14 19:18:58 INFO mapreduce.Job:  map 0% reduce 0%\n",
+      "18/01/14 19:19:14 INFO mapreduce.Job:  map 46% reduce 0%\n",
+      "18/01/14 19:19:20 INFO mapreduce.Job:  map 67% reduce 0%\n",
+      "18/01/14 19:19:24 INFO mapreduce.Job:  map 83% reduce 0%\n",
+      "18/01/14 19:19:25 INFO mapreduce.Job:  map 100% reduce 0%\n",
+      "18/01/14 19:19:34 INFO mapreduce.Job:  map 100% reduce 13%\n",
+      "18/01/14 19:19:35 INFO mapreduce.Job:  map 100% reduce 25%\n",
+      "18/01/14 19:19:37 INFO mapreduce.Job:  map 100% reduce 38%\n",
+      "18/01/14 19:19:38 INFO mapreduce.Job:  map 100% reduce 63%\n",
+      "18/01/14 19:19:39 INFO mapreduce.Job:  map 100% reduce 75%\n",
+      "18/01/14 19:19:42 INFO mapreduce.Job:  map 100% reduce 88%\n",
+      "18/01/14 19:19:43 INFO mapreduce.Job:  map 100% reduce 100%\n",
+      "18/01/14 19:19:43 INFO mapreduce.Job: Job job_1515912325866_0013 completed successfully\n",
+      "18/01/14 19:19:43 INFO mapreduce.Job: Counters: 50\n",
+      "\tFile System Counters\n",
+      "\t\tFILE: Number of bytes read=391455430\n",
+      "\t\tFILE: Number of bytes written=588451754\n",
+      "\t\tFILE: Number of read operations=0\n",
+      "\t\tFILE: Number of large read operations=0\n",
+      "\t\tFILE: Number of write operations=0\n",
+      "\t\tHDFS: Number of bytes read=76874501\n",
+      "\t\tHDFS: Number of bytes written=2005826\n",
+      "\t\tHDFS: Number of read operations=30\n",
+      "\t\tHDFS: Number of large read operations=0\n",
+      "\t\tHDFS: Number of write operations=16\n",
+      "\tJob Counters \n",
+      "\t\tKilled reduce tasks=1\n",
+      "\t\tLaunched map tasks=2\n",
+      "\t\tLaunched reduce tasks=9\n",
+      "\t\tData-local map tasks=2\n",
+      "\t\tTotal time spent by all maps in occupied slots (ms)=49500\n",
+      "\t\tTotal time spent by all reduces in occupied slots (ms)=60006\n",
+      "\t\tTotal time spent by all map tasks (ms)=49500\n",
+      "\t\tTotal time spent by all reduce tasks (ms)=60006\n",
+      "\t\tTotal vcore-milliseconds taken by all map tasks=49500\n",
+      "\t\tTotal vcore-milliseconds taken by all reduce tasks=60006\n",
+      "\t\tTotal megabyte-milliseconds taken by all map tasks=50688000\n",
+      "\t\tTotal megabyte-milliseconds taken by all reduce tasks=61446144\n",
+      "\tMap-Reduce Framework\n",
+      "\t\tMap input records=4100\n",
+      "\t\tMap output records=11937375\n",
+      "\t\tMap output bytes=171810210\n",
+      "\t\tMap output materialized bytes=195685078\n",
+      "\t\tInput split bytes=228\n",
+      "\t\tCombine input records=0\n",
+      "\t\tCombine output records=0\n",
+      "\t\tReduce input groups=427176\n",
+      "\t\tReduce shuffle bytes=195685078\n",
+      "\t\tReduce input records=11937375\n",
+      "\t\tReduce output records=164645\n",
+      "\t\tSpilled Records=35812125\n",
+      "\t\tShuffled Maps =16\n",
+      "\t\tFailed Shuffles=0\n",
+      "\t\tMerged Map outputs=16\n",
+      "\t\tGC time elapsed (ms)=997\n",
+      "\t\tCPU time spent (ms)=94930\n",
+      "\t\tPhysical memory (bytes) snapshot=2344796160\n",
+      "\t\tVirtual memory (bytes) snapshot=20211679232\n",
+      "\t\tTotal committed heap usage (bytes)=1562378240\n",
+      "\tShuffle Errors\n",
+      "\t\tBAD_ID=0\n",
+      "\t\tCONNECTION=0\n",
+      "\t\tIO_ERROR=0\n",
+      "\t\tWRONG_LENGTH=0\n",
+      "\t\tWRONG_MAP=0\n",
+      "\t\tWRONG_REDUCE=0\n",
+      "\tFile Input Format Counters \n",
+      "\t\tBytes Read=76874273\n",
+      "\tFile Output Format Counters \n",
+      "\t\tBytes Written=2005826\n",
+      "18/01/14 19:19:43 INFO streaming.StreamJob: Output directory: name_count_result_lkv\n",
+      "18/01/14 19:19:45 INFO client.RMProxy: Connecting to ResourceManager at /0.0.0.0:8032\n",
+      "18/01/14 19:19:45 INFO client.RMProxy: Connecting to ResourceManager at /0.0.0.0:8032\n",
+      "18/01/14 19:19:46 INFO mapred.FileInputFormat: Total input files to process : 8\n",
+      "18/01/14 19:19:46 INFO mapreduce.JobSubmitter: number of splits:8\n",
+      "18/01/14 19:19:46 INFO Configuration.deprecation: mapred.text.key.comparator.options is deprecated. Instead, use mapreduce.partition.keycomparator.options\n",
+      "18/01/14 19:19:46 INFO mapreduce.JobSubmitter: Submitting tokens for job: job_1515912325866_0015\n",
+      "18/01/14 19:19:46 INFO impl.YarnClientImpl: Submitted application application_1515912325866_0015\n",
+      "18/01/14 19:19:46 INFO mapreduce.Job: The url to track the job: http://4c3b86566330:8088/proxy/application_1515912325866_0015/\n",
+      "18/01/14 19:19:46 INFO mapreduce.Job: Running job: job_1515912325866_0015\n",
+      "18/01/14 19:21:16 INFO mapreduce.Job: Job job_1515912325866_0015 running in uber mode : false\n",
+      "18/01/14 19:21:16 INFO mapreduce.Job:  map 0% reduce 0%\n",
+      "18/01/14 19:21:21 INFO mapreduce.Job:  map 75% reduce 0%\n",
+      "18/01/14 19:21:24 INFO mapreduce.Job:  map 100% reduce 0%\n",
+      "18/01/14 19:21:27 INFO mapreduce.Job:  map 100% reduce 100%\n",
+      "18/01/14 19:21:27 INFO mapreduce.Job: Job job_1515912325866_0015 completed successfully\n",
+      "18/01/14 19:21:27 INFO mapreduce.Job: Counters: 49\n",
+      "\tFile System Counters\n",
+      "\t\tFILE: Number of bytes read=2335124\n",
+      "\t\tFILE: Number of bytes written=5931495\n",
+      "\t\tFILE: Number of read operations=0\n",
+      "\t\tFILE: Number of large read operations=0\n",
+      "\t\tFILE: Number of write operations=0\n",
+      "\t\tHDFS: Number of bytes read=2006770\n",
+      "\t\tHDFS: Number of bytes written=2005826\n",
+      "\t\tHDFS: Number of read operations=27\n",
+      "\t\tHDFS: Number of large read operations=0\n",
+      "\t\tHDFS: Number of write operations=2\n",
+      "\tJob Counters \n",
+      "\t\tLaunched map tasks=8\n",
+      "\t\tLaunched reduce tasks=1\n",
+      "\t\tData-local map tasks=8\n",
+      "\t\tTotal time spent by all maps in occupied slots (ms)=23829\n",
+      "\t\tTotal time spent by all reduces in occupied slots (ms)=2811\n",
+      "\t\tTotal time spent by all map tasks (ms)=23829\n",
+      "\t\tTotal time spent by all reduce tasks (ms)=2811\n",
+      "\t\tTotal vcore-milliseconds taken by all map tasks=23829\n",
+      "\t\tTotal vcore-milliseconds taken by all reduce tasks=2811\n",
+      "\t\tTotal megabyte-milliseconds taken by all map tasks=24400896\n",
+      "\t\tTotal megabyte-milliseconds taken by all reduce tasks=2878464\n",
+      "\tMap-Reduce Framework\n",
+      "\t\tMap input records=164645\n",
+      "\t\tMap output records=164645\n",
+      "\t\tMap output bytes=2005827\n",
+      "\t\tMap output materialized bytes=2335166\n",
+      "\t\tInput split bytes=944\n",
+      "\t\tCombine input records=0\n",
+      "\t\tCombine output records=0\n",
+      "\t\tReduce input groups=580\n",
+      "\t\tReduce shuffle bytes=2335166\n",
+      "\t\tReduce input records=164645\n",
+      "\t\tReduce output records=164645\n",
+      "\t\tSpilled Records=329290\n",
+      "\t\tShuffled Maps =8\n",
+      "\t\tFailed Shuffles=0\n",
+      "\t\tMerged Map outputs=8\n",
+      "\t\tGC time elapsed (ms)=904\n",
+      "\t\tCPU time spent (ms)=13380\n",
+      "\t\tPhysical memory (bytes) snapshot=2558279680\n",
+      "\t\tVirtual memory (bytes) snapshot=18096648192\n",
+      "\t\tTotal committed heap usage (bytes)=1756364800\n",
+      "\tShuffle Errors\n",
+      "\t\tBAD_ID=0\n",
+      "\t\tCONNECTION=0\n",
+      "\t\tIO_ERROR=0\n",
+      "\t\tWRONG_LENGTH=0\n",
+      "\t\tWRONG_MAP=0\n",
+      "\t\tWRONG_REDUCE=0\n",
+      "\tFile Input Format Counters \n",
+      "\t\tBytes Read=2005826\n",
+      "\tFile Output Format Counters \n",
+      "\t\tBytes Written=2005826\n",
+      "18/01/14 19:21:27 INFO streaming.StreamJob: Output directory: words_ranking_result_lkv\n",
+      "cat: Unable to write to output stream.\n"
+     ]
+    }
+   ],
    "source": [
-    "%%bash\n",
-    "\n",
     "%%bash\n",
     "\n",
     "OUT_DIR_1=\"name_count_result_lkv\"\n",
