hadoop-streaming-assignment-4-word-groups

--- a/Big-data-essentials/hadoop-playground.ipynb
+++ b/Big-data-essentials/hadoop-playground.ipynb
@@ -55,6 +55,28 @@
     "hadoop fs -put /path/in/linux /hdfs/path\n",
     "hadoop fs -copyFromLocal /path/in/linux /hdfs/path"
    ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "# Donload files\n",
+    "hadoop fs -get /hdfs/source/path /localfs/destination/path\n",
+    "hadoop fs -copyToLocal /hdfs/source/path /localfs/destination/path"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "# Grep example \n",
+    "# Will be performed as map reduce job\n",
+    "!hadoop org.apache.hadoop.examples.Grep wordcount_result_lkv/part* output '.*english.*'"
+   ]
   }
  ],
  "metadata": {
