counting-number-of-the-mutual-friends

--- a/Big-data-analysis/hive-assignment-task1.ipynb
+++ b/Big-data-analysis/hive-assignment-task1.ipynb
@@ -24,9 +24,9 @@
     "\n",
     "USE lkvdb;\n",
     "\n",
-    "DROP TABLE IF EXISTS posts_sample_tmp;\n",
+    "DROP TABLE IF EXISTS posts_sample;\n",
     "\n",
-    "CREATE EXTERNAL TABLE posts_sample_tmp(\n",
+    "CREATE EXTERNAL TABLE posts_sample(\n",
     "    Id STRING,\n",
     "    PostTypeId STRING,\n",
     "    ParentId STRING,\n",
@@ -41,9 +41,9 @@
     "\n",
     "tblproperties (\"skip.header.line.count\"=\"1\");\n",
     "\n",
-    "DROP VIEW IF EXISTS posts_sample_tmp_view;\n",
+    "DROP VIEW IF EXISTS posts_sample_view;\n",
     "\n",
-    "CREATE VIEW posts_sample_tmp_view(\n",
+    "CREATE VIEW posts_sample_view(\n",
     "    Id,\n",
     "    PostTypeId,\n",
     "    ParentId,\n",
@@ -57,7 +57,7 @@
     "    ParentId,\n",
     "    regexp_extract(CreationDate, \"[0-9]{4}\", 0),\n",
     "    regexp_extract(CreationDate, \"[0-9]{4}-[0-9]{2}\", 0)\n",
-    "FROM posts_sample_tmp;\n",
+    "FROM posts_sample;\n",
     "\n",
     "SELECT YEAR, MONTH, count FROM (\n",
     "    SELECT * FROM (\n",
@@ -66,7 +66,7 @@
     "            MONTH, \n",
     "            count(*) as count, \n",
     "            row_number() over() as rn \n",
-    "        FROM posts_sample_tmp_view \n",
+    "        FROM posts_sample_view \n",
     "        GROUP BY YEAR, MONTH \n",
     "        ORDER BY rn DESC \n",
     "        LIMIT 3\n",
