--- a/Big-data-essentials/hadoop-streaming-assignment-3-name-count.ipynb
+++ b/Big-data-essentials/hadoop-streaming-assignment-3-name-count.ipynb
@@ -1,6 +1,29 @@
 {
  "cells": [
   {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "### Name Count"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "#### Task description\n",
+    "\n",
+    "Make WordCount program for all the names in the dataset. Name is a word with the following properties:\n",
+    "\n",
+    "The first character is not a digit (other characters can be digits).\n",
+    "The first character is uppercase, all the other characters that are letters are lowercase.\n",
+    "There are less than 0.5% occurrences of this word, when this word regardless to its case appears in the dataset and the condition (2) is not met.\n",
+    "Order by quantity, most popular first, output format:\n",
+    "\n",
+    "name < tab > count"
+   ]
+  },
+  {
    "cell_type": "code",
    "execution_count": 1,
    "metadata": {},
@@ -348,21 +371,21 @@
  ],
  "metadata": {
   "kernelspec": {
-   "display_name": "Python 2",
+   "display_name": "Python 3",
    "language": "python",
-   "name": "python2"
+   "name": "python3"
   },
   "language_info": {
    "codemirror_mode": {
     "name": "ipython",
-    "version": 2
+    "version": 3
    },
    "file_extension": ".py",
    "mimetype": "text/x-python",
    "name": "python",
    "nbconvert_exporter": "python",
-   "pygments_lexer": "ipython2",
-   "version": "2.7.12"
+   "pygments_lexer": "ipython3",
+   "version": "3.6.3"
   }
  },
  "nbformat": 4,
