spark tasks descriptions

--- a/Big-data-essentials/real-world-applications-tf-idf.ipynb
+++ b/Big-data-essentials/real-world-applications-tf-idf.ipynb
@@ -1,6 +1,43 @@
 {
  "cells": [
   {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "### TF-IDF"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "#### Task description\n",
+    "In this task Hadoop Streaming is used to process Wikipedia articles dump.\n",
+    "\n",
+    "Dataset location: /data/wiki/en_articles_part\n",
+    "\n",
+    "Stop words list is in ‘/datasets/stop_words_en.txt’ file.\n",
+    "\n",
+    "Format: article_id < tab > article_text\n",
+    "\n",
+    "Calculate tf*idf for each pair (word, article) from the Wikipedia dump. Apply the stop words filter to speed up calculations. Term frequency (tf) is a function depending on a term (word) and a document (article):\n",
+    "\n",
+    "tf(term, doc_id) = Nt/N,\n",
+    "\n",
+    "where Nt - quantity of particular term in the document, N - the total number of terms in the document (without stop words)\n",
+    "\n",
+    "Inverse document frequency (idf) is a function depends on a term:\n",
+    "\n",
+    "idf(term) = 1/log(1 + Dt),\n",
+    "\n",
+    "where Dt - number of documents in the dataset with the particular term.\n",
+    "\n",
+    "You can find more information here: https://en.wikipedia.xn--org/wiki/Tfidf-q82h but use just the formulas mentioned above.\n",
+    "\n",
+    "Output: tf*idf for term=’labor’ and article_id=12"
+   ]
+  },
+  {
    "cell_type": "code",
    "execution_count": 1,
    "metadata": {},
@@ -213,21 +250,21 @@
  ],
  "metadata": {
   "kernelspec": {
-   "display_name": "Python 2",
+   "display_name": "Python 3",
    "language": "python",
-   "name": "python2"
+   "name": "python3"
   },
   "language_info": {
    "codemirror_mode": {
     "name": "ipython",
-    "version": 2
+    "version": 3
    },
    "file_extension": ".py",
    "mimetype": "text/x-python",
    "name": "python",
    "nbconvert_exporter": "python",
-   "pygments_lexer": "ipython2",
-   "version": "2.7.12"
+   "pygments_lexer": "ipython3",
+   "version": "3.6.3"
   }
  },
  "nbformat": 4,
