--- a/Big-data-essentials/spark-assignment-2-collocations.ipynb
+++ b/Big-data-essentials/spark-assignment-2-collocations.ipynb
@@ -1,9 +1,47 @@
 {
  "cells": [
   {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "### Collocations"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "#### Task description\n",
+    "As for the second part of the assignment, your task is to extract collocations: that is word combinations that occur together. For example, “high school” or “roman empire”.\n",
+    "\n",
+    "To find collocations, you will use NPMI (normalized pointwise mutual information) metric.\n",
+    "\n",
+    "PMI of two words, a & b, is defined as “PMI(a, b) = ln (P(ab) / (P(a) * P(b))”, where P(ab) is the probability of two words coming one after the other, and P(a) and P(b) are probabilities of words a & b respectively.\n",
+    "\n",
+    "You will estimate probabilities with occurrence counts, that is “P(a) = # of occurrences of word a / total number of words”, and “P(ab) = # of occurrences of words ‘a b’ / total number of word pairs”.\n",
+    "\n",
+    "To build an intuition behind the definition, see Reading material.\n",
+    "\n",
+    "Therefore, rare combinations of coupled words have large PMI.\n",
+    "\n",
+    "NPMI is computed as “NPMI(a, b) = PMI(a, b) / -ln P(ab)”. This normalizes the quantity to be within the range [-1; 1].\n",
+    "\n",
+    "You task is a bit more complicated now: \n",
+    " * Extract all the words, as in the previous task.\n",
+    " * Filter out stopwords using the dictionary (/datasets/stop_words_en.txt ) (do not forget to convert words to the lowercase!)\n",
+    " * Compute all bigrams (that is, pairs of consequent words)\n",
+    " * Leave only bigrams with at least 500 occurrences\n",
+    " * Compute NPMI for every bigram (note: when computing probabilities, you need unpruned counts!)\n",
+    " * Sort word pairs by NPMI in the descending order\n",
+    " * Print top 39 word pairs, with words delimited by the underscore “_”"
+   ]
+  },
+  {
    "cell_type": "code",
    "execution_count": 1,
-   "metadata": {},
+   "metadata": {
+    "collapsed": true
+   },
    "outputs": [],
    "source": [
     "from __future__ import division\n",
@@ -15,7 +53,9 @@
   {
    "cell_type": "code",
    "execution_count": 2,
-   "metadata": {},
+   "metadata": {
+    "collapsed": true
+   },
    "outputs": [],
    "source": [
     "sc = SparkContext(conf=SparkConf().setAppName(\"Spark assignment collocations\").setMaster(\"local\"))"
@@ -24,7 +64,9 @@
   {
    "cell_type": "code",
    "execution_count": 3,
-   "metadata": {},
+   "metadata": {
+    "collapsed": true
+   },
    "outputs": [],
    "source": [
     "path_to_file='/datasets/stop_words_en.txt'\n",
@@ -37,7 +79,9 @@
   {
    "cell_type": "code",
    "execution_count": 4,
-   "metadata": {},
+   "metadata": {
+    "collapsed": true
+   },
    "outputs": [],
    "source": [
     "def parse_article(line):\n",
@@ -53,7 +97,9 @@
   {
    "cell_type": "code",
    "execution_count": 5,
-   "metadata": {},
+   "metadata": {
+    "collapsed": true
+   },
    "outputs": [],
    "source": [
     "wiki = sc.textFile(\"/data/wiki/en_articles_part/articles-part\", 16) \\\n",
@@ -65,7 +111,9 @@
   {
    "cell_type": "code",
    "execution_count": 6,
-   "metadata": {},
+   "metadata": {
+    "collapsed": true
+   },
    "outputs": [],
    "source": [
     "words_count = wiki.collectAsMap()\n",
@@ -75,7 +123,9 @@
   {
    "cell_type": "code",
    "execution_count": 7,
-   "metadata": {},
+   "metadata": {
+    "collapsed": true
+   },
    "outputs": [],
    "source": [
     "def get_pairs(line):\n",
@@ -98,7 +148,9 @@
   {
    "cell_type": "code",
    "execution_count": 8,
-   "metadata": {},
+   "metadata": {
+    "collapsed": true
+   },
    "outputs": [],
    "source": [
     "pairs = sc.textFile(\"/data/wiki/en_articles_part/articles-part\", 16) \\\n",
@@ -109,7 +161,9 @@
   {
    "cell_type": "code",
    "execution_count": 9,
-   "metadata": {},
+   "metadata": {
+    "collapsed": true
+   },
    "outputs": [],
    "source": [
     "total_collocations = pairs.count()"
@@ -118,7 +172,9 @@
   {
    "cell_type": "code",
    "execution_count": 10,
-   "metadata": {},
+   "metadata": {
+    "collapsed": true
+   },
    "outputs": [],
    "source": [
     "def pmi(pair):\n",
@@ -133,7 +189,9 @@
   {
    "cell_type": "code",
    "execution_count": 11,
-   "metadata": {},
+   "metadata": {
+    "collapsed": true
+   },
    "outputs": [],
    "source": [
     "top_39 = pairs.map(lambda x: (x, 1)) \\\n",
@@ -203,21 +261,21 @@
  ],
  "metadata": {
   "kernelspec": {
-   "display_name": "Python 2",
+   "display_name": "Python 3",
    "language": "python",
-   "name": "python2"
+   "name": "python3"
   },
   "language_info": {
    "codemirror_mode": {
     "name": "ipython",
-    "version": 2
+    "version": 3
    },
    "file_extension": ".py",
    "mimetype": "text/x-python",
    "name": "python",
    "nbconvert_exporter": "python",
-   "pygments_lexer": "ipython2",
-   "version": "2.7.12"
+   "pygments_lexer": "ipython3",
+   "version": "3.6.3"
   }
  },
  "nbformat": 4,
