spark tasks descriptions

--- a/Big-data-essentials/reconstructing-the-path.ipynb
+++ b/Big-data-essentials/reconstructing-the-path.ipynb
@@ -16,7 +16,11 @@
     "\n",
     "Dataset location: /data/twitter/twitter_sample.txt\n",
     "\n",
-    "Format: user_id < tab > follower_id"
+    "Format: user_id < tab > follower_id\n",
+    "\n",
+    "Your task is to find the shortest path between vertices 12 and 34. In case of multiple shortest paths (that is, disjoint paths with the same length), any will suffice. Output format is the sequence of vertices, delimited by a comma, without spaces. For example, the path “12 -> 42 -> 34” should be printed as:\n",
+    "\n",
+    "12,42,34"
    ]
   },
   {
